--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
-
 }
