--- a/currencyedittexttester/build.gradle
+++ b/currencyedittexttester/build.gradle
@@ -7,13 +7,13 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.1'
+    buildToolsVersion '26.0.3'
 
     defaultConfig {
         applicationId "com.blackcat.currencyedittexttester"
